--- a/src/pages/home-page/home-page.module.scss
+++ b/src/pages/home-page/home-page.module.scss
@@ -4,7 +4,12 @@
   background: $grey;
   border-bottom: 1px solid $lightgrey;
 
-  height: 45vh; 
+  height: 40vh; 
+  
+  // width: 1200px;
+  // position: absolute;
+  // top: 0;
+  // z-index: -1;
 
   // background-image: url('../../assets/keyboard_one.jpg');
   background-size: cover;
