--- a/src/pages/footer/footer.module.scss
+++ b/src/pages/footer/footer.module.scss
@@ -6,9 +6,9 @@
   grid-template-columns: repeat(auto-fill, minmax(10rem, 20rem));
   grid-template-rows: auto;
   min-height: 20rem;
-  border-top: 1px solid $lightgrey;
+  border-top: 1px solid lighten($lightgrey, 5%);
 
-  background: rgba(255, 255, 255, 0.6);
+  // background: rgba(255, 255, 255, 0.6);
 }
 
 @media screen and (max-width: 500px) {
@@ -20,20 +20,23 @@
 
 // LOGO SECTION
 .logoContainer {
-
   .logo {
     font-family: $title-font;
     font-size: 4rem;
+  }
+
+  .logoLink {
+    color: $black;
   }
 }
 
 // LINKS SECTION
 .linksContainer {
-  // border: 1px solid black;
   grid-column: 2 / -1;
   max-width: 100%;
   display: flex;
   justify-content: space-evenly;
+  padding: 2rem 0;
 
   .links {
     display: flex;
@@ -43,11 +46,13 @@
       display: flex;
       justify-content: center;
       margin-bottom: 0.5rem;
+      font-family: $primary-font;
     }
 
     .link {
       display: flex;
       justify-content: center;
+      font-size: 1.4rem;
     }
   }
 
@@ -59,6 +64,7 @@
       display: flex;
       justify-content: center;
       margin-bottom: 0.5rem;
+      font-family: $primary-font;
     }
 
     .icons {
@@ -100,25 +106,35 @@
     height: auto;
     font-size: 1.4rem;
 
+    .links {
+      .title {
+        font-size: 1.35rem;
+      }
+
+      .link {
+        font-size: 1.2rem;
+      }
+    }
+
     .socialLinks {
       .icons {
         display: flex;
         justify-content: center;
         .instagram {
-          font-size: 1.4rem;
-          margin-right: 1px;
+          font-size: 1.5rem;
+          margin-right: 5px;
           text-align: center;
         }
 
         .twitter {
-          font-size: 1.4rem;
-          margin-right: 1px;
+          font-size: 1.5rem;
+          margin-right: 5px;
           text-align: center;
         }
 
         .youtube {
-          font-size: 1.4rem;
-          margin-right: 1px;
+          font-size: 1.5rem;
+          margin-right: 5px;
           text-align: center;
         }
       }
