--- a/src/components/home-landing/landing.module.scss
+++ b/src/components/home-landing/landing.module.scss
@@ -6,7 +6,7 @@
   grid-template-columns: repeat(8, 1fr);
   grid-template-rows: repeat(7, 1fr);
 
-  border-bottom: 1px solid lighten($lightgrey, 7%);
+  // margin: 2rem 0;
 }
 
 .image {
