--- a/src/components/home-news/home-news.module.scss
+++ b/src/components/home-news/home-news.module.scss
@@ -1,6 +1,6 @@
 @import '../../styles/global.styles';
 
-.products {
+.news {
   padding: 0 1rem 1rem 1rem;
   border-top: 1px solid lighten($lightgrey, 7%);
 }
