--- a/src/pages/signin-page/signin-page.module.scss
+++ b/src/pages/signin-page/signin-page.module.scss
@@ -1,5 +1,39 @@
 @import '../../styles/global.styles';
 
 .signinpage {
+  // border: 1px solid $black;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 90%;
+
+  background-image: linear-gradient(rgba(255, 255, 255, 0.25), rgba(255, 255, 255, 0.25)), url('../../assets/background_one.jpg');
+  background-position: center;
+  background-size: cover;
+
+  .container {
+    background: $white;
+    padding: 4rem 1rem;
+    opacity: 0.85;
+  }
+}
+
+// MEDIA QUERIES
+@media screen and (max-width: 500px) {
+  .signinpage {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 78%;
   
+    background-image: linear-gradient(rgba(255, 255, 255, 0.25), rgba(255, 255, 255, 0.25)), url('../../assets/background_one.jpg');
+    background-position: center;
+    background-size: cover;
+  
+    .container {
+      background: $white;
+      padding: 1rem 0;
+      opacity: 0.85;
+    }
+  }
 }
