--- a/src/pages/header/header.module.scss
+++ b/src/pages/header/header.module.scss
@@ -72,7 +72,9 @@
     }
 
     .isActive {
-      // font-weight: bold;
+      color: $secondary-color;
+      padding-bottom: 0.6px;
+      border-bottom: 2px solid $black;
     }
   }
 }
