added firebase functionality to create new users and connecting signin + signout capabilities

--- a/src/components/home-landing/landing.module.scss
+++ b/src/components/home-landing/landing.module.scss
@@ -13,7 +13,7 @@
   grid-column: 2 / -1;
   grid-row: 1 / -1;
 
-  background-image: url('../../assets/landing_one.jpg');
+  background-image: linear-gradient(rgba(255, 255, 255, 0.05), rgba(255, 255, 255, 0.05)), url('../../assets/landing_one.jpg');
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
