--- a/src/components/cart/cart.module.scss
+++ b/src/components/cart/cart.module.scss
@@ -27,16 +27,27 @@
 
   .items {
     padding: 1rem;
+    // margin-top: auto;
+
+    .emptyMessage {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+
+      margin-top: auto;
+      font-size: 1.5rem;
+      color: $grey;
+    }
   }
 
   .totals {
-    padding: 0 1rem;
     margin-top: auto;
     font-size: 1.5rem;
 
     display: flex;
     justify-content: space-around;
     align-items: center;
+    font-family: $primary-font;
 
     .count {
 
