--- a/src/components/shop-preview/shop-preview.module.scss
+++ b/src/components/shop-preview/shop-preview.module.scss
@@ -2,7 +2,7 @@
 
 // SHOP PREVIEW
 .shopPreview {
-  
+
 }
 
 // HEADER SECTION
@@ -51,9 +51,12 @@
   grid-template-columns: repeat(auto-fill, minmax(20%, 1fr));
   grid-template-rows: auto;
   grid-gap: 1rem;
+
+  border-bottom: 1px solid lighten($lightgrey, 7%);
+  padding-bottom: 2rem;
 }
 
-// MEDIA QUERIES
+// ********************************** MEDIA QUERIES ********************************** //
 @media screen and (max-width: 500px) {
   .header {
 
