--- a/src/components/home-products/products.module.scss
+++ b/src/components/home-products/products.module.scss
@@ -2,7 +2,7 @@
 
 .products {
   padding: 0 1rem 1rem 1rem;
-  border-top: 1px solid lighten($lightgrey, 7%);
+  // border-top: 1px solid lighten($lightgrey, 7%);
 }
 
 // HEADER SECTION
