--- a/src/components/products-container/products-container.module.scss
+++ b/src/components/products-container/products-container.module.scss
@@ -11,6 +11,7 @@
 // CATEGORY CONTAINER
 .category {
   padding: 1rem;
+  border: 1px solid lighten($lightgrey, 7%);
 
   &:hover {
     box-shadow: 1px 1px 6px 1px $lightgrey;
@@ -34,7 +35,7 @@
   }
 }
 
-// MEDIA QUERIES
+// ********************************** MEDIA QUERIES ********************************** //
 @media screen and (max-width: 500px) {
   .container {
     display: grid;
