--- a/src/components/shop-item/shop-item.module.scss
+++ b/src/components/shop-item/shop-item.module.scss
@@ -6,7 +6,8 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  padding: 1rem;
+  // padding: 1rem;
+  padding: 1rem 1.5rem;
 
   &:hover {
     box-shadow: 1px 1px 6px 1px $lightgrey;
@@ -37,7 +38,7 @@
   }
   
   .isFavorite {
-    color: $primary-color;
+    color: $secondary-color;
     font-size: 2rem;
     cursor: pointer;
   }
@@ -109,16 +110,21 @@
 
 // ********************************** MEDIA QUERIES ********************************** //
 @media screen and (max-width: 500px) {
+  // SHOP ITEM
+  .shopItem {
+    padding: 1rem;
+  }
+
   // FAVORITE SECTION
-.favorites {
-  .notFavorite {
-    font-size: 1.75rem;
+  .favorites {
+    .notFavorite {
+      font-size: 1.75rem;
+    }
+    
+    .isFavorite {
+      font-size: 1.75rem;
+    }
   }
-  
-  .isFavorite {
-    font-size: 1.75rem;
-  }
-}
 
   // IMAGE CONTAINER
   .imageContainer {
