--- a/src/components/shop-preview/shop-preview.module.scss
+++ b/src/components/shop-preview/shop-preview.module.scss
@@ -52,7 +52,7 @@
   grid-template-rows: auto;
   grid-gap: 1rem;
 
-  border-bottom: 1px solid lighten($lightgrey, 7%);
+  // border-bottom: 1px solid lighten($lightgrey, 7%);
   padding-bottom: 2rem;
 }
 
