added mobile styling for CheckoutItem.js + CheckoutPage.js and added necessary state via redux into CheckoutItem.js

--- a/src/components/button/button.module.scss
+++ b/src/components/button/button.module.scss
@@ -49,7 +49,7 @@
   }
 }
 
-// MEDIA QUERIES
+// ********************************** MEDIA QUERIES ********************************** //
 @media screen and (max-width: 500px) {
   .button {
     width: auto;
