--- a/src/components/cart-item/cart-item.module.scss
+++ b/src/components/cart-item/cart-item.module.scss
@@ -76,7 +76,7 @@
 
 }
 
-// MEDIA QUERIES
+// ********************************** MEDIA QUERIES ********************************** //
 @media screen and (max-width: 500px) {
   // CART ITEM
   .cartItem {
