--- a/src/components/cart/cart.module.scss
+++ b/src/components/cart/cart.module.scss
@@ -72,7 +72,7 @@
   
 }
 
-// MEDIA QUERIES
+// ********************************** MEDIA QUERIES ********************************** //
 @media screen and (max-width: 500px) {
   .cart {
     width: 75%;
