--- a/src/components/home-landing/landing.module.scss
+++ b/src/components/home-landing/landing.module.scss
@@ -17,6 +17,7 @@
   background-repeat: no-repeat;
 }
 
+// ********************************** MEDIA QUERIES ********************************** //
 @media screen and (max-width: 500px) {
   .landing {
     height: 30vh;
