--- a/src/components/shop-overview/shop-overview.module.scss
+++ b/src/components/shop-overview/shop-overview.module.scss
@@ -3,3 +3,8 @@
 .shopOverview {
   padding: 0 1rem 1rem 1rem;
 }
+
+// ********************************** MEDIA QUERIES ********************************** //
+@media screen and (max-width: 500px) {
+  
+}
