--- a/src/components/cart-icon/cart-icon.module.scss
+++ b/src/components/cart-icon/cart-icon.module.scss
@@ -26,7 +26,7 @@
   }
 }
 
-// MEDIA QUERIES
+// ********************************** MEDIA QUERIES ********************************** //
 @media screen and (min-width: 500px) {
   .carticon {
     font-size: 1.9rem;
