--- a/src/components/form-input/form-input.module.scss
+++ b/src/components/form-input/form-input.module.scss
@@ -52,7 +52,7 @@
   }
 }
 
-// MEDIA QUERIES
+// ********************************** MEDIA QUERIES ********************************** //
 @media screen and (max-width: 500px) {
 
 }
