--- a/src/components/home-products/products.module.scss
+++ b/src/components/home-products/products.module.scss
@@ -44,7 +44,7 @@
   }
 }
 
-// MEDIA QUERIES
+// ********************************** MEDIA QUERIES ********************************** //
 @media screen and (max-width: 500px) {
   .header {
 
