--- a/src/pages/checkout-page/checkout-page.module.scss
+++ b/src/pages/checkout-page/checkout-page.module.scss
@@ -1,5 +1,114 @@
 @import '../../styles/global.styles';
 
-.checkoutpage {
+// CHECKOUT PAGE
+.checkoutPage {
   padding: 0 1rem 1rem 1rem;
+  // display: grid;
+  // grid-template-columns: repeat(auto-fill, minmax(20%, 1fr));
+  // grid-template-rows: auto;
+  // grid-gap: 1rem;
+}
+
+// HEADER SECTION
+.header {
+  
+  .title {
+    font-family: $title-font;
+    margin-bottom: 0;
+  }
+
+  .subtitle {
+    font-family: $primary-font;
+    font-size: 1.4rem;
+    font-weight: lighter;
+    color: $grey;
+    margin-top: 0.5rem;
+  }
+}
+
+// CART HEADER SECTION
+.cartHeader {
+  border-top: 1px solid $lightgrey;
+  padding: 2rem 0;
+  display: grid;
+  grid-template-columns: 55% 15% 15% 15%;
+
+  font-size: 1.2rem;
+  font-weight: bold;
+  font-family: $primary-font;
+  letter-spacing: 0.7px;
+
+  .product {
+    grid-column: 1 / 2;
+  }
+
+  .price {
+    grid-column: 2 / 3;
+    text-align: justify;
+  }
+
+  .quantity {
+    grid-column: 3 / 4;
+    text-align: center;
+  }
+
+  .itemTotal {
+    grid-column: 4 / 5;
+    text-align: right;
+  }
+}
+
+// CART CONTAINER SECTION
+.cartContainer {
+
+}
+
+// TOTALS SECTION
+.totals {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border-top: 1px solid ligthen($lightgrey, 7%);
+  // border-bottom: 1px solid lighten($lightgrey, 7%);
+  padding: 2rem 0;
+
+  font-size: 1.4rem;
+
+  .text {
+    
+    .subQuantity {
+      font-size: 1.2rem;
+      color: $grey;
+    }
+  }
+
+  .subtotal {
+    text-align: right;
+    .taxText {
+      font-size: 1.2rem;
+      color: $grey;
+    }
+  }
+}
+
+// ********************************** MEDIA QUERIES ********************************** //
+@media screen and (min-width: 500px) {
+  // HEADER SECTION
+  .header {
+    
+    .title {
+
+    }
+
+    .subtitle {
+      font-size: 1.6rem;
+    }
+  }
+
+  // TOTALS SECTION
+  .totals {
+    .text {
+
+    }
+  }
 }
