added addItem + removeItem functionality from cart.action.js  to CheckoutItem.js

--- a/src/components/checkout-item/checkout-item.module.scss
+++ b/src/components/checkout-item/checkout-item.module.scss
@@ -57,6 +57,7 @@
     font-size: 1.5rem;
     font-weight: bolder;
     color: $secondary-color;
+    cursor: pointer;
   }
 
   .quantity {
@@ -67,6 +68,7 @@
     font-size: 1.5rem;
     font-weight: bolder;
     color: $secondary-color;
+    cursor: pointer;
   }
 }
 
