added ButtonStripeCheckout.js for payment processing

--- a/src/components/cart/cart.module.scss
+++ b/src/components/cart/cart.module.scss
@@ -9,7 +9,7 @@
   min-height: 35%;
   max-height: 45%;
   width: 25%;
-  background: white;
+  background: $white;
   opacity: .95;
 
   display: flex;
