--- a/src/pages/checkout-page/checkout-page.module.scss
+++ b/src/pages/checkout-page/checkout-page.module.scss
@@ -91,6 +91,12 @@
   }
 }
 
+// STRIPE BUTTON CHECKOUT SECTION
+.stripe {
+  display: flex;
+  justify-content: flex-end;
+}
+
 // ********************************** MEDIA QUERIES ********************************** //
 @media screen and (min-width: 500px) {
   // HEADER SECTION
