--- a/src/pages/checkout-page/checkout-page.module.scss
+++ b/src/pages/checkout-page/checkout-page.module.scss
@@ -3,24 +3,23 @@
 // CHECKOUT PAGE
 .checkoutPage {
   padding: 0 1rem 1rem 1rem;
-  // display: grid;
-  // grid-template-columns: repeat(auto-fill, minmax(20%, 1fr));
-  // grid-template-rows: auto;
-  // grid-gap: 1rem;
 }
 
 // HEADER SECTION
 .header {
+  margin-bottom: 1rem;
   
   .title {
     font-family: $title-font;
+    color: $secondary-color;
     margin-bottom: 0;
   }
 
   .subtitle {
-    font-family: $primary-font;
+    font-family: $source-sans-font;
     font-size: 1.4rem;
     font-weight: lighter;
+    text-transform: uppercase;
     color: $grey;
     margin-top: 0.5rem;
   }
@@ -28,8 +27,8 @@
 
 // CART HEADER SECTION
 .cartHeader {
-  border-top: 1px solid $lightgrey;
-  padding: 2rem 0;
+  border-top: 1px solid lighten($lightgrey, 7%);
+  padding: 2rem 1rem;
   display: grid;
   grid-template-columns: 55% 15% 15% 15%;
 
@@ -70,7 +69,7 @@
   align-items: center;
   border-top: 1px solid ligthen($lightgrey, 7%);
   // border-bottom: 1px solid lighten($lightgrey, 7%);
-  padding: 2rem 0;
+  padding: 2rem 1rem;
 
   font-size: 1.4rem;
 
@@ -95,26 +94,57 @@
 .stripe {
   display: flex;
   justify-content: flex-end;
+  padding-right: 1rem;
 }
 
 // ********************************** MEDIA QUERIES ********************************** //
 @media screen and (min-width: 500px) {
   // HEADER SECTION
   .header {
-    
-    .title {
-
-    }
-
+  
     .subtitle {
-      font-size: 1.6rem;
+      font-size: 1.5rem;
     }
+  }
+
+  // CART HEADER SECTION
+  .cartHeader {
+    padding: 2rem 2rem;
+    font-size: 1.6rem;
   }
 
   // TOTALS SECTION
   .totals {
-    .text {
+    display: grid;
+    grid-template-columns: 55% 15% 15% 15%;
+    padding: 2rem 2rem;
 
+    .text {
+      grid-column: 3 / 4;
+      text-align: center;
+      font-weight: bold;
+
+      .subQuantity {
+        font-size: 1.4rem;
+        font-weight: lighter;
+        color: $grey;
+      }
     }
+
+    .subtotal {
+      grid-column: 4 / 5;
+      text-align: right;
+      .taxText {
+        font-size: 1.4rem;
+        color: $grey;
+      }
+    }
+  }
+
+  // STRIPE BUTTON CHECKOUT SECTION
+  .stripe {
+    display: flex;
+    justify-content: flex-end;
+    padding-right: 2rem;
   }
 }
