--- a/src/components/home-news/home-news.module.scss
+++ b/src/components/home-news/home-news.module.scss
@@ -44,6 +44,15 @@
   }
 }
 
+// NEWS CONTAINER SECTION
+.newsContainer {
+  font-family: $secondary-font;
+  text-transform: uppercase;
+  font-style: italic;
+  color: $grey;
+  font-size: 1.4rem;
+}
+
 // ********************************** MEDIA QUERIES ********************************** //
 @media screen and (max-width: 500px) {
   .header {
