--- a/src/components/cart-item/cart-item.module.scss
+++ b/src/components/cart-item/cart-item.module.scss
@@ -23,17 +23,28 @@
   display: grid;
   grid-template-rows: repeat(3, 1fr);
 
-  .title {
-    grid-row: 1 / 2;
-    font-size: 1.4rem;
-    font-family: $primary-font;
-  }
+  .productContainer {
+    grid-row: 1 / 3;
+    display: grid;
+    grid-template-rows: repeat(minmax(auto, 1fr));
 
-  .subtitle {
-    grid-row: 2 / 3;
-    font-size: 1.1rem;
-    color: $secondary-color;
-    font-style: italic;
+    .title {
+      grid-row: 1 / 2;
+      font-size: 1.2rem;
+      font-family: $primary-font;
+
+      margin-bottom: 0.25rem;
+    }
+  
+    .subtitle {
+      grid-row: 2 / 3;
+      font-size: 1.1rem;
+      color: $secondary-color;
+      font-style: italic;
+      text-align: justify;
+
+      margin-bottom: 0.25rem;
+    }
   }
 
   .totalsContainer {
