--- a/src/pages/footer/footer.module.scss
+++ b/src/pages/footer/footer.module.scss
@@ -7,8 +7,6 @@
   grid-template-rows: auto;
   min-height: 20rem;
   border-top: 1px solid lighten($lightgrey, 5%);
-
-  // background: rgba(255, 255, 255, 0.6);
 }
 
 @media screen and (max-width: 500px) {
@@ -35,7 +33,8 @@
 
 // LINKS SECTION
 .linksContainer {
-  grid-column: 2 / -1;
+  // grid-column: 2 / -1;
+  grid-column: 2 / 7;
   max-width: 100%;
   display: flex;
   justify-content: space-evenly;
