--- a/src/pages/header/header.module.scss
+++ b/src/pages/header/header.module.scss
@@ -5,7 +5,9 @@
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(10rem, 20rem));
   grid-template-rows: auto;
-  // border-bottom: 1px solid lighten($lightgrey, 6%);
+  // border-bottom: 1px solid lighten($lightgrey, 7%);
+
+  padding: 1rem 0;
   
   &:hover {
     background: $white;
@@ -43,7 +45,8 @@
 
 // LINK SECTION
 .linksContainer {
-  grid-column: 2 / -1;
+  // grid-column: 2 / -1;
+  grid-column: 2 / 7;
   max-width: 100%;
   text-transform: uppercase;
 
