--- a/src/pages/footer/footer.module.scss
+++ b/src/pages/footer/footer.module.scss
@@ -103,6 +103,7 @@
   }
 }
 
+// ********************************** MEDIA QUERIES ********************************** //
 @media screen and (max-width: 500px) {
   .linksContainer {
     height: auto;
