--- a/src/pages/header/header.module.scss
+++ b/src/pages/header/header.module.scss
@@ -5,7 +5,7 @@
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(10rem, 20rem));
   grid-template-rows: auto;
-  // border-bottom: 1px solid lighten($lightgrey, 7%);
+  border-bottom: 1px solid lighten($lightgrey, 7%);
 
   padding: 1rem 0;
   
