--- a/src/components/cart-item/cart-item.module.scss
+++ b/src/components/cart-item/cart-item.module.scss
@@ -2,8 +2,8 @@
 
 .cartItem {
   display: grid;
-  grid-template-columns: 35% 65%;
-  grid-gap: 0.5rem;
+  grid-template-columns: 30% 70%;
+  grid-gap: 1rem;
 
   border-top: 1px solid $lightgrey;
   border-bottom: 1px solid $lightgrey;
@@ -14,12 +14,14 @@
 
 // IMAGE SECTION
 .image {
+  grid-column: 1 / 2;
   width: 100%;
   margin: auto 0;
 }
 
 // ITEM SECTION
 .item {
+  grid-column: 2 / 3;
   display: grid;
   grid-template-rows: repeat(3, 1fr);
 
