--- a/src/pages/connect-page/connect-page.module.scss
+++ b/src/pages/connect-page/connect-page.module.scss
@@ -2,9 +2,54 @@
 
 .connectPage {
   padding: 0 1rem 1rem 1rem;
+  height: 70vh;
+}
+
+// CONNECT LANDING
+.connectLanding {
+  height: 100%;
+  background-image: linear-gradient(rgba(255, 255, 255, 0.2), rgba(255, 255, 255, 0.2)), url('../../assets/construction-image_one.jpg');
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  text-transform: uppercase;
+  font-family: $source-sans-font;
+  letter-spacing: 0.25px;
+
+  .text {
+    background: $white;
+    padding: 3rem;
+    opacity: 0.80;
+    font-size: 2rem;
+  }
+
+  .link {
+    font-size: 1.4rem;
+    color: blue;
+    text-decoration: underline;
+    text-transform: capitalize;
+  }
 }
 
 // ********************************** MEDIA QUERIES ********************************** //
 @media screen and (min-width: 500px) {
+  .connectPage {
 
+  }
+
+  // CONNECT LANDING
+  .connectLanding {
+    .text {
+      font-size: 2.2rem;
+    }
+
+    .link {
+      font-size: 1.6rem;
+    }
+  }
 }
